# LinkedIn_Scraper

./: .gitignore  README.es-AR.md  README.md  auth_assistant.py  config.py  excel_exporter.py  guest_api.py  linkedin_full_scraper.py  linkedin_job_search.py  linkedin_parser.py  linkedin_scraper.py  linkedin_scraper_v2.py  linkedin_tools.py  mcp_client.py  pyproject.toml  requirements.txt  run_all.py  setup.ps1
data/outputs/historical/: jobs_20260715.json  linkedin_jobs_mcp_historical.json
output/: wordpress_ba.json
scripts/: analyze_jobs.py  run_all.py
src/linkedin_scraper/: config.py  orchestrator.py
src/linkedin_scraper/cli/: linkedin_tools.py
src/linkedin_scraper/pipeline/: deduplicator.py  validator.py
src/linkedin_scraper/sources/: guest_api.py  mcp_client.py  ocr_extractor.py
src/linkedin_scraper/utils/: ip_rotation.py  rate_budget.py
tests/: conftest.py  test_mcp_single.py
