[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "linkedin-scraper"
version = "0.1.0"
description = "Multi-method employment-focused LinkedIn scraper with auth assistant and Excel export"
requires-python = ">=3.11"
license = { text = "MIT" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "mcp: tests that require a live LinkedIn MCP session (skipped without login)",
]
